dynamic annimations for menu + fix add options multiple times to mobile menu

--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
-  <title>ResMenu Demo</title>
-  <link rel="stylesheet" type="text/css" href="bower_components/entypo/font/entypo.css" />
-  <link rel="stylesheet" type="text/css" href="css/resMenu.css" />
-  <link rel="stylesheet" type="text/css" href="css/myStyle.css" />
-  <link rel="stylesheet" type="text/css" href="css/animate.css">
+    <title>ResMenu Demo</title>
+    <link rel="stylesheet" type="text/css" href="bower_components/entypo/font/entypo.css" />
+    <link rel="stylesheet" type="text/css" href="css/resMenu.css" />
+    <link rel="stylesheet" type="text/css" href="css/myStyle.css" />
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
 </head>
 
 <body>
-  <button id="resMenuMobileButton" class="icon-menu active"><!-- Silence is GOLDEN --></button>
-
-  <div id="resMenuMobileContainer">
-    <!-- Silence is GOLDEN -->
-  </div>
-
-  <div id="resMenuDesktopContainer" class="myAwesomeContainer">
-    <ul id="resMenu" class="myMenu resMenuSlideRight">
-      <li><a href="#">Option 1</a></li>
-
-      <li><a href="#">Option 2</a></li>
-
-      <li class="resMenuDisableMobile"><a href="#">Option 3</a></li>
-
-      <li><a href="#">Option 4</a></li>
-
-      <li><a href="#">Option 5</a></li>
-    </ul>
-  </div><script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js">
-</script><script type="text/javascript" src="js/resMenu.js">
-</script>
+    <button id="resMenuMobileButton" class="icon-menu active">
+        <!-- Silence is GOLDEN -->
+    </button>
+    <div id="resMenuMobileContainer">
+        <!-- Silence is GOLDEN -->
+    </div>
+    <div id="resMenuDesktopContainer" class="myAwesomeContainer">
+        <ul id="resMenu" class="myMenu resMenuBounceInLeft
+">
+            <li><a href="#">Option 1</a></li>
+            <li><a href="#">Option 2</a></li>
+            <li class="resMenuDisableMobile"><a href="#">Option 3</a></li>
+            <li><a href="#">Option 4</a></li>
+            <li><a href="#">Option 5</a></li>
+        </ul>
+    </div>
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js">
+    </script>
+    <script type="text/javascript" src="js/resMenu.js">
+    </script>
 </body>
+
 </html>
